@@ -91,8 +91,8 @@ import org.sakaiproject.exception.IdUnusedException;
 import org.sakaiproject.memory.api.Cache;
 import org.sakaiproject.memory.api.MemoryService;
 import org.sakaiproject.memory.api.SimpleConfiguration;
-import org.sakaiproject.profile2.logic.ProfileLogic;
-import org.sakaiproject.profile2.util.ProfileConstants;
+import org.sakaiproject.profile2.api.ProfileService;
+import org.sakaiproject.profile2.api.ProfileConstants;
 import org.sakaiproject.roster.api.RosterEnrollment;
 import org.sakaiproject.roster.api.RosterFunctions;
 import org.sakaiproject.roster.api.RosterGroup;
@@ -103,7 +103,6 @@ import org.sakaiproject.roster.api.SakaiProxy;
 import org.sakaiproject.site.api.Group;
 import org.sakaiproject.site.api.Site;
 import org.sakaiproject.site.api.SiteService;
-import org.sakaiproject.site.api.ToolConfiguration;
 import org.sakaiproject.sitestats.api.SitePresenceTotal;
 import org.sakaiproject.sitestats.api.StatsManager;
 import org.sakaiproject.tool.api.SessionManager;
@@ -146,7 +145,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
 
     @Resource private PrivacyManager privacyManager;
     @Resource private MemoryService memoryService;
-    @Resource private ProfileLogic profileLogic;
+    @Resource private ProfileService profileService;
     @Resource private SakaiPersonManager sakaiPersonManager;
     @Resource private SecurityService securityService;
     @Resource private ServerConfigurationService serverConfigurationService;
@@ -166,55 +165,31 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
     private Pattern userPropsRegex;
 
     public void init() {
+        // Register all Roster functions if they aren't already registered
+        String[] functions = {
+            RosterFunctions.ROSTER_FUNCTION_EXPORT,
+            RosterFunctions.ROSTER_FUNCTION_VIEWALL,
+            RosterFunctions.ROSTER_FUNCTION_VIEWHIDDEN,
+            RosterFunctions.ROSTER_FUNCTION_VIEWGROUP,
+            RosterFunctions.ROSTER_FUNCTION_VIEWENROLLMENTSTATUS,
+            RosterFunctions.ROSTER_FUNCTION_VIEWPROFILE,
+            RosterFunctions.ROSTER_FUNCTION_VIEWEMAIL,
+            RosterFunctions.ROSTER_FUNCTION_VIEWID,
+            RosterFunctions.ROSTER_FUNCTION_VIEWOFFICIALPHOTO,
+            RosterFunctions.ROSTER_FUNCTION_VIEWSITEVISITS,
+            RosterFunctions.ROSTER_FUNCTION_VIEWUSERPROPERTIES,
+            RosterFunctions.ROSTER_FUNCTION_VIEWCANDIDATEDETAILS
+        };
 
         List<String> registered = functionManager.getRegisteredFunctions();
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_EXPORT)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_EXPORT, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWALL)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWALL, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWHIDDEN)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWHIDDEN, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWGROUP)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWGROUP, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWENROLLMENTSTATUS)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWENROLLMENTSTATUS, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWPROFILE)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWPROFILE, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWEMAIL)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWEMAIL, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWOFFICIALPHOTO)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWOFFICIALPHOTO, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWSITEVISITS)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWSITEVISITS, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWUSERPROPERTIES)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWUSERPROPERTIES, true);
-        }
-
-        if (!registered.contains(RosterFunctions.ROSTER_FUNCTION_VIEWCANDIDATEDETAILS)) {
-            functionManager.registerFunction(RosterFunctions.ROSTER_FUNCTION_VIEWCANDIDATEDETAILS, true);
+        
+        for (String function : functions) {
+            if (!registered.contains(function)) {
+                functionManager.registerFunction(function, true);
+            }
         }
 
         eventTrackingService.addObserver(this);
-
         memberComparator = new RosterMemberComparator(getFirstNameLastName());
         userPropsRegex = Pattern.compile(serverConfigurationService.getString("roster.filter.user.properties.regex", "^udp\\.dn$|additionalInfo|specialNeeds|studentNumber"));
     }
@@ -317,18 +292,20 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
 
     @Override
     public Boolean getViewEmail(String siteId) {
-
-        //To view emails it first needs to be enabled in sakai.properties and the user must have the permission.
-        if (serverConfigurationService.getBoolean("roster_view_email",DEFAULT_VIEW_EMAIL)) {
-            return hasUserSitePermission(getCurrentUserId(), RosterFunctions.ROSTER_FUNCTION_VIEWEMAIL, siteId);
-        }
-        return false;
+        return serverConfigurationService.getBoolean("roster_view_email", DEFAULT_VIEW_EMAIL) &&
+                hasUserSitePermission(getCurrentUserId(), RosterFunctions.ROSTER_FUNCTION_VIEWEMAIL, siteId);
     }
 
     @Override
     public Boolean getViewUserDisplayId() {
+        return getViewUserDisplayId(getCurrentSiteId());
+    }
+
+    @Override
+    public Boolean  getViewUserDisplayId(String siteId) {
         return serverConfigurationService.getBoolean(
-                "roster.display.userDisplayId", DEFAULT_VIEW_USER_DISPLAY_ID);
+                "roster.display.userDisplayId", DEFAULT_VIEW_USER_DISPLAY_ID) &&
+                hasUserSitePermission(getCurrentUserId(), RosterFunctions.ROSTER_FUNCTION_VIEWID, siteId);
     }
 
     @Override
@@ -521,7 +498,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
                     path.append(phoneticPronunciation);
                     path.append("</span>");
                 }
-                if (profileLogic.getUserNamePronunciation(user.getId()) != null) {
+                if (profileService.getUserNamePronunciation(user.getId()) != null) {
                     path.append("<sakai-pronunciation-player user-id=\"").append(userId).append("\" />");
                 }
                 pronounceMap.put(user.getId(), path.toString());
@@ -547,16 +524,10 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
 
         Map<String, User> userMap = getUserMap(membership);
 
-        // Audio URL for how to pronounce each name
-        Map<String, String> pronounceMap = new HashMap<>();
-        if (this.getViewUserNamePronunciation()) {
-            pronounceMap = getPronunciationMap(userMap);
-        }
-
         Collection<Group> groups = site.getGroups();
         for (Member member : membership) {
             try {
-                RosterMember rosterMember = getRosterMember(userMap, groups, member, site, pronounceMap);
+                RosterMember rosterMember = getRosterMember(userMap, groups, member, site);
                 rosterMembers.put(rosterMember.getEid(), rosterMember);
             } catch (UserNotDefinedException e) {
                 log.warn("user not found: {}" + e.getId());
@@ -593,7 +564,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
                 }
 
                 // Now add any instructors
-                filtered.addAll(unfiltered.stream().filter(RosterMember::isInstructor).collect(Collectors.toList()));
+                filtered.addAll(unfiltered.stream().filter(RosterMember::isInstructor).toList());
 
                 // The group loop is shuffling members, sort the list again
                 filtered.sort(memberComparator);
@@ -620,10 +591,6 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
             if (check.add(m.getUserId())) {
                 cleanedMembers.add(m);
 
-                // Apply a unique profile link to each user outside of the caching layer
-                // e.g., /portal/site/~current-user-id/tool/profile2tooluuid/otherUserId
-                m.setProfileLink(getProfileToolLink(m.getUserId(), site.getId()));
-
                 // Now strip out any unauthorised info
                 if (!isAllowed(currentUserId, RosterFunctions.ROSTER_FUNCTION_VIEWEMAIL, site.getReference())) {
                     m.setEmail(null);
@@ -632,7 +599,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
                         try {
                             m.setEmail(userDirectoryService.getUser(m.getUserId()).getEmail());
                         } catch (UserNotDefinedException unde) {
-                            // This ain't gonna happen
+                            log.debug("Unable to find user {} in directory service", m.getUserId());
                         }
                     }
                 }
@@ -716,7 +683,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
         return membership;
     }
 
-    private RosterMember getRosterMember(Map<String, User> userMap, Collection<Group> groups, Member member, Site site, Map<String, String> pronounceMap)
+    private RosterMember getRosterMember(Map<String, User> userMap, Collection<Group> groups, Member member, Site site)
         throws UserNotDefinedException {
 
         String userId = member.getUserId();
@@ -728,6 +695,8 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
 
         RosterMember rosterMember = new RosterMember(userId);
         rosterMember.setEid(user.getEid());
+        rosterMember.setFirstName(user.getFirstName());
+        rosterMember.setLastName(user.getLastName());
         rosterMember.setDisplayId(member.getUserDisplayId());
         rosterMember.setRole(member.getRole().getId());
         rosterMember.setEmail(user.getEmail());
@@ -742,13 +711,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
             rosterMember.setNickname(sakaiPerson.getNickname());
         }
 
-        // See if there is a pronunciation available for the user
-        String pronunciation = pronounceMap.get(user.getId());
-        //Try by email instead of Id
-        if (StringUtils.isEmpty(pronunciation)) {
-            pronunciation = pronounceMap.get(user.getEmail());
-        }
-        rosterMember.setPronunciation(pronunciation);
+        rosterMember.setHasPronunciationRecording(profileService.hasPronunciationRecording(userId));
 
         Map<String, String> userPropertiesMap = new HashMap<>();
         ResourceProperties props = user.getProperties();
@@ -786,7 +749,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
      * Returns the enrollment set members for the specified site and enrollment
      * set.
      *
-     * @param siteId the ID of the site.
+     * @param site the entire site object
      * @param enrollmentSetId the ID of the enrollment set.
      * @return the enrollment set members for the specified site and enrollment
      *         set.
@@ -862,7 +825,7 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
             for (Member member : membership) {
 
                 try {
-                    RosterMember rosterMember = getRosterMember(userMap, groups, member, site, pronounceMap);
+                    RosterMember rosterMember = getRosterMember(userMap, groups, member, site);
 
                     siteMembers.add(rosterMember);
                     String memberRoleId = rosterMember.getRole();
@@ -1201,11 +1164,12 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
     }
 
     @Override
-    public Map<String, String> getSearchIndex(String siteId, String userId, String groupId, String roleId, String enrollmentSetId, String enrollmentStatus) {
+    public List<Map<String, String>> getSearchIndex(String siteId, String userId, String groupId, String roleId, String enrollmentSetId, String enrollmentStatus) {
 
         return getMembership(userId, siteId, groupId, roleId, enrollmentSetId, enrollmentStatus)
                 .stream()
-                .collect(Collectors.toMap(RosterMember::getUserId, RosterMember::getDisplayName));
+                .map(m -> Map.of("id", m.getUserId(), "eid", m.getEid(), "displayName", m.getDisplayName()))
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -1235,22 +1199,15 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
 
     @Override
     public String getProfileToolLink(String otherUserId, String siteId) {
-
         try {
             Site site = siteService.getSite(siteService.getUserSiteId(getCurrentUserId()));
-            return Optional.ofNullable(site.getToolForCommonId("sakai.profile2")).map(tc -> {
-
-                return site.getUrl() + "/tool/" + tc.getId()
-                    + (StringUtils.isNotBlank(otherUserId) ? "/viewprofile/" + otherUserId + "?fromSiteId=" + siteId : "");
-            }).orElseGet(() -> {
-                log.info("The current user has not got the profile tool added to their workspace");
-                return "";
-            });
+            return Optional.ofNullable(site.getToolForCommonId("sakai.profile2"))
+                    .map(tc -> site.getUrl() + "/tool/" + tc.getId() + (StringUtils.isNotBlank(otherUserId) ? "/viewprofile/" + otherUserId + "?fromSiteId=" + siteId : ""))
+                    .orElse(StringUtils.EMPTY);
         } catch (Exception e) {
-            log.warn("Error getting profile tool link: {}", e.toString());
+            log.warn("Could not create profile tool link for site: {}, {}", siteId, e.toString());
         }
-
-        return null;
+        return StringUtils.EMPTY;
     }
 
     @Override
@@ -1285,8 +1242,10 @@ public class SakaiProxyImpl implements SakaiProxy, Observer {
 
             if (SiteService.SECURE_UPDATE_SITE_MEMBERSHIP.equals(eventName)
                     || SiteService.SECURE_UPDATE_GROUP_MEMBERSHIP.equals(eventName)
-                    || AuthzGroupService.SECURE_REMOVE_AUTHZ_GROUP.equals(eventName)) {
-                log.debug("Site membership or groups updated. Clearing caches ...");
+                    || AuthzGroupService.SECURE_REMOVE_AUTHZ_GROUP.equals(eventName)
+                    || AuthzGroupService.SECURE_UPDATE_AUTHZ_GROUP.equals(eventName)
+            ) {
+                log.debug("Site membership, groups, or permissions updated. Clearing caches because of event: {}", eventName);
                 String siteId = event.getContext();
                 this.removeSiteRosterCache(siteId);
             }
